src/styles.css
/* FONTS */

@font-face {
  font-family: "protest_revolutionregular";
  src:
    url("./fonts/protestrevolution-regular-webfont.woff2") format("woff2"),
    url("./fonts/protestrevolution-regular-webfont.woff") format("woff"),
    url("./fonts/ProtestRevolution-Regular.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "kalamregular";
  src:
    url("./fonts/kalam-regular-webfont.woff2") format("woff2"),
    url("./fonts/kalam-regular-webfont.woff") format("woff"),
    url("./fonts/Kalam-Regular.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

/* Mobile/Small Devices - General Styles */
:root {
  --text-container-color: #556b2faa;
}

* {
  box-sizing: border-box;
  font-size: 16px;
}

body {
  margin: 0;
  background-color: lightgray; /*Temporary*/
  background-image: url("./images/general-background.webp");
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 100vh;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

#root {
  height: 100%;
}

.App {
  display: flex;
  justify-content: center;
  align-items: center;
}

h1,
h2 {
  font-family: "protest_revolutionregular", Verdana, Geneva, Tahoma, sans-serif;
}

h1 {
  font-size: 3em;
  text-align: center;
  margin-top: 0;
}

h2 {
  font-size: 2.5em;
  text-align: center;
  margin: 0 0 0.5em 0;
}

p {
  font-family: "kalamregular", "Arial Narrow", Arial, sans-serif;
  font-size: 1.5em;
  text-align: left;
}

.App {
  min-height: 100%;
  height: fit-content;
}

/* General Buttons */

button {
  background-image: url("./images/button-background.png");
  background-size: 100% 100%;
  color: #ffffff;
  font-family: "protest_revolutionregular", Verdana, Geneva, Tahoma, sans-serif;
  font-weight: 700;
}

button:hover {
  color: rgb(255, 163, 97);
  cursor: pointer;
}

/* Fades the button out slightly when disabled */
button:disabled {
  background-blend-mode: overlay;
}

/* Hides the hover effect when button is disabled. Must match color set for button style above. */
button:disabled:hover {
  color: #ffffff;
}

/* Outer div for each Screen component */
.screen-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  padding: 3.5em 0;
  height: fit-content;
}

/* Nav-Buttons */

.home-button {
  position: absolute;
  top: 0.6em;
  left: 0.6em;
  height: 3em;
  width: 3em;
  background-image: url(./images/home-button-background.png);
}

.nav-buttons {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.nav-buttons button {
  min-height: 3em;
  min-width: 8em;
  max-height: 5em;
  max-width: 10em;
  margin: 1em 1em 1em 1em;
}

/* HomeScreen */

.home-elements {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: column;
  height: 60%;
  max-height: 30em;
}

.home-elements .nav-buttons {
  padding-bottom: 4em;
}

/* HelpScreen */

.help-elements {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: column;
  height: 60%;
}

.help-content-background {
  max-width: 90%;
  padding: 0 0.7em;
  border-radius: 1em;
  background-color: var(--text-container-color);
  box-shadow: 9px 6px 10px #000000aa;
}

.help-elements h2 {
  margin-bottom: 1em;
}

#help-nav-buttons {
  flex-direction: row-reverse;
  justify-content: center;
  margin-top: 3em;
}

/* QuizScreen */

.quizscreen-container {
  min-height: 100vh;
}

.quiz-elements {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  height: 60%;
  width: 100%;
}

.current-question-background {
  max-width: 80%;
  padding: 0 0.7em;
  border-radius: 1em;
  background-color: var(--text-container-color);
  box-shadow: 9px 6px 10px #000000aa;
}

.current-question {
  max-width: 100%;
  margin: 0;
  padding: 0.5em 0;
}

.answer-container {
  display: flex;
  margin: 1em auto 0;
  justify-content: center;
  flex-wrap: wrap;
  max-width: 40em;
}

.answer-button {
  height: 5em;
  width: 12em;
  margin: 1em 1em 1em 1em;
  padding: 1em;
}

.answer-button-text {
  font-family: "kalamregular", "Arial Narrow", Arial, sans-serif;
  font-weight: 400;
  font-size: 1em;
  max-width: 70%;
  word-wrap: normal;
}

/* Reserves space for next-button to avoid content shifting*/
.quizscreen-container .nav-buttons {
  height: 3em;
}

.quizscreen-container .nav-buttons button {
  height: 3em;
  margin: 0;
}

/*Progress tracker for QuizScreen*/

.progress-tracker-container {
  width: 50vw;
  min-width: 5em;
  height: 2.5em;
  margin-top: 1em;
  display: flex;
  position: relative;
  flex-direction: column;
  align-items: center;
}

.progress-bar-border {
  border: 2px black solid;
  height: 100%;
  width: 100%;
  border-radius: 1em;
}

.progress-bar-background {
  width: 100%;
  height: 100%;
  background-color: #80808077;
  border-radius: 1em;
  overflow: hidden;
}

.progress-bar-foreground {
  width: 0%;
  height: 100%;
  background-color: #556b2fcc;
  transition: width 1s;
  border-radius: 1em;
}

.progress-text {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  margin: 0;
  text-align: center;
  font-size: 1em;
  color: #f5f5f5;
}

/* ResultScreen */

.result-paragraphs {
  max-width: 100%;
  margin: 0;
  padding: 0.5em 0;
}

.result-paragraph-background {
  max-width: 90%;
  padding: 0 0.7em;
  border-radius: 1em;
  background-color: var(--text-container-color);
  box-shadow: 9px 6px 10px #000000aa;
}

.result-text-container {
  display: flex;
  align-items: center;
  flex-direction: column;
}

.result-elements {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: column;
  height: 60%;
}

.result-elements h2 {
  margin-bottom: 1em;
}

#result-nav-buttons {
  margin-top: 3em;
}

#correct-answer {
  color: lime;
}

#incorrect-answer {
  color: red;
}

/* Larger Device Styles */
@media (min-width: 769px) {
  /* General Styles */

  #root {
    width: 100%;
  }

  .App {
    width: 100%;
  }

  h1 {
    font-size: 5em;
  }

  h2 {
    font-size: 4.5em;
  }

  p {
    font-size: 2em;
  }

  button {
    font-size: 1.5em;
  }

  .screen-container {
    padding: 5em 0;
  }

  /* HomeScreen */

  /* HelpScreen */

  .help-content-background {
    max-width: 60%;
  }

  /* QuizScreen */

  .quizscreen-container {
    width: 90%;
  }

  .current-question-background {
    max-width: 60%;
  }

  .answer-container {
    width: 100%;
    margin: 3em auto 0;
    max-width: 50em;
  }

  .answer-button {
    margin: 0.5em;
    height: 5em;
    width: 12em;
  }

  /* Reserves space for next-button to avoid content shifting*/
  .quizscreen-container .nav-buttons {
    min-height: 5em;
    height: fit-content;
  }

  /*Progress tracker for QuizScreen*/

  .progress-tracker-container {
    max-width: 40em;
  }

  .progress-text {
    font-size: 1.4em;
  }
}

